<resources>
    <string name="app_name">Health Out Loud</string>
    <string name="title_activity_newsfeed">NewsfeedActivity</string>
    <string name="post_template_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="submit_button">Submit</string>
    <string name="nav_newsfeed">Newsfeed</string>
    <string name="nav_my_posts">My Posts</string>
    <string name="nav_settings">Account Settings</string>
    <string name="nav_logout">Logout</string>

    <string name="hide_post">Hide Post</string>
    <string name="block_user">Block User</string>
    <string name="report_post">Report Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="could_not_connect_error">Could not connect to network.</string>
    <string name="wrong_login_error">Wrong email or password.</string>

    <string-array name="feelings_list">
        <item>(select a feeling)</item>
        <item>Amazed</item>
        <item>Annoyed</item>
        <item>Anxious</item>
        <item>Blessed</item>
        <item>Disappointed</item>
        <item>Disgusted</item>
        <item>Embarrassed</item>
        <item>Grateful</item>
        <item>Happy</item>
        <item>Hopeful</item>
        <item>Jealous</item>
        <item>Lonely</item>
        <item>Love</item>
        <item>Mad</item>
        <item>Nervous</item>
        <item>Sad</item>
        <item>Scared</item>
        <item>Self-conscious</item>
        <item>Shocked</item>
        <item>Unhappy</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_change_password">Change Password</string>
    <string name="title_change_password">Change Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="sign_up">Sign up</string>

</resources>
